Improve the README file

--- a/first_app/Gemfile
+++ b/first_app/Gemfile
@@ -40,7 +40,7 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 
 #!!!!!!!! VERY IMPORTANT!!!!!!!!
 gem 'tzinfo'
-#!!!!!!!! DON'T START SERVER WITHOUT THIS LINE!!!!!!!!!!!
+#!!!!!!!! DON'T START SERVER WITHOUT THIS LINE. should be before gem 'tzinfo-data'!!!!!!!!!!!
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin]
